--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: pet-clinic
         environment_name: PetClinic-env
-        version_label: ${{github.SHA}}
+        version_label: ${{github.SHA}}1
         region: us-east-1
         deployment_package: target/spring-petclinic-rest-2.6.2.jar
 
