--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
         environment_name: PetClinic-env
         version_label: ${{github.SHA}}1
         region: us-east-1
+        use_existing_version_if_available: true
         deployment_package: target/spring-petclinic-rest-2.6.2.jar
 
 
