--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: pet-clinic
-        environment_name: PetClinic-env
-        version_label: ${{github.SHA}}1
+        environment_name: PetClinic-env1
+        version_label: ${{github.SHA}}
         region: us-east-1
         use_existing_version_if_available: true
         deployment_package: target/spring-petclinic-rest-2.6.2.jar
