--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: pet-clinic
+        application_name: PetClinic-env
         environment_name: PetClinic-env1
         version_label: ${{github.SHA}}
         region: us-east-1
