--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: PetClinic-env
-        environment_name: PetClinic-env1
+        application_name: pet-clinic
+        environment_name: Petclinic-env-1
         version_label: ${{github.SHA}}
         region: us-east-1
         use_existing_version_if_available: true
